[project]
name = "tryton-tools"
version = "0.1.0"
description = "Gibbs, Rotacje"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy~=2.4.2", "pandas~=3.0.0"]

[project.scripts]
extract_gibbs = "extract_gibbs:main"
rotate_xyz = "rotate_xyz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extract_gibbs.py", "rotate_xyz.py"]
